fix list spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -212,7 +212,8 @@ blockquote {
     margin: 0;
   }
 
-  p+p {
+  p+p,
+  li+li {
     margin-top: var(--space-md);
   }
 
